修改了文件

--- a/projects/doubanmovie/dbdy.html
+++ b/projects/doubanmovie/dbdy.html
@@ -201,7 +201,7 @@
 	      _this.isLoading = true
 	      _this.$element.find('.loading').show()
 	      $.ajax({
-	        url: 'http://api.douban.com/v2/movie/top250',
+	        url: '//api.douban.com/v2/movie/top250',
 	        data: {
 	          start: _this.index||0
 	        },
