--- a/projects/doubanmovie/dbdy.html
+++ b/projects/doubanmovie/dbdy.html
@@ -288,7 +288,7 @@
       _this.isLoading = true
       _this.$element.find('.loading').show()
       $.ajax({
-        url: 'http://api.douban.com/v2/movie/us_box',
+        url: '//api.douban.com/v2/movie/us_box',
         dataType: 'jsonp'
       }).done(function(ret){
         callback&&callback(ret)
@@ -372,7 +372,7 @@
       var _this = this
       _this.$element.find('.loading').show()
       $.ajax({
-        url: 'http://api.douban.com/v2/movie/search',
+        url: '//api.douban.com/v2/movie/search',
         data: {
           q: _this.keyword
         },
