--- a/projects/music/music.html
+++ b/projects/music/music.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<meta name="referrer" content="never">
+	<title>music</title>
 	<link rel="stylesheet" href="//at.alicdn.com/t/font_450162_vs7ddco2wnze61or.css">
 	<script src="//cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
+	<link rel="stylesheet" href="//cdn.bootcss.com/animate.css/3.5.2/animate.min.css">
 	<style>
 		* {
 			margin: 0;
@@ -144,6 +146,7 @@
 			height: .8vh;
 			border-radius: .2vh;
 			background: rgba(255,255,255,0.5);
+			cursor: pointer;
 		}
 		main .area-bar .bar-progress {
 			position: absolute;
@@ -151,6 +154,7 @@
 			width: 10%;
 			border-radius: .2vh;
 			background-color: #fff;
+			transition: width .8s;
 		}
 		main .area-bar .current-time {
 			width: 3vh;
@@ -237,6 +241,10 @@
 		footer li.active {
 			box-shadow: 0 0 .5vh .5vh rgba(255,255,255,0.8);
 		}
+		.boomText {
+			display: inline-block;
+			opacity: 0;
+		}
 	</style>
 </head>
 <body>
@@ -245,9 +253,9 @@
 			<div class="aside">
 				<figure></figure>
 				<div class="actions">
-					<span class="iconfont icon-like"></span>
-					<span class="iconfont icon-play"></span>
-					<span class="iconfont icon-next"></span>
+					<span class="btn-collect iconfont icon-like"></span>
+					<span class="btn-play iconfont icon-pause"></span>
+					<span class="btn-next iconfont icon-next"></span>
 				</div>
 			</div>
 			<div class="detail">
@@ -321,6 +329,8 @@
 				this.$rightBtn = this.$footer.find(".icon-right")
 				this.isToEnd = false
 				this.isToStart = true
+				this.isAnimate = false
+
 				this.bind()
 				this.render()
 			},
@@ -328,12 +338,15 @@
 			bind: function(){
 				var _this = this
 				this.$rightBtn.on("click", function(){
+					if(_this.isAnimate) return
 					var itemWidth = _this.$box.find("li").outerWidth(true)
 					var rowCount = Math.floor(_this.$box.width()/itemWidth)
 					if(!_this.isToEnd){
+						_this.isAnimate = true
 						_this.$ul.animate({
 							left: "-="+rowCount*itemWidth
 						},400,function(){
+							_this.isAnimate = false
 							_this.isToStart = false
 							if(parseFloat(_this.$box.width()) - parseFloat(_this.$ul.css("left")) >= parseFloat(_this.$ul.css("width"))){
 								_this.isToEnd = true
@@ -342,12 +355,15 @@
 					}
 				})
 				this.$leftBtn.on("click", function(){
+					if(_this.isAnimate) return
 					var itemWidth = _this.$box.find("li").outerWidth(true)
 					var rowCount = Math.floor(_this.$box.width()/itemWidth)
 					if(!_this.isToStart){
+						_this.isAnimate = true
 						_this.$ul.animate({
 							left: "+="+rowCount*itemWidth
 						},400,function(){
+							_this.isAnimate = false
 							_this.isToEnd = false
 							if(parseFloat(_this.$ul.css("left")) >= 0){
 								_this.isToStart = true
@@ -359,25 +375,26 @@
 					$(this).addClass("active")
 					.siblings().removeClass("active")
 
-					EventCenter.fire("select-album", $(this).attr("data-channel-id"))
+					EventCenter.fire("select-album", {
+						channelId: $(this).attr("data-channel-id"),
+						channelName: $(this).attr("data-channel-name")
+					})
 				})
 			},
 			//渲染页面
 			render: function(){
 				var _this = this
-				$.getJSON("http://api.jirengu.com/fm/getChannels.php")
+				$.getJSON("//jirenguapi.applinzi.com/fm/getChannels.php")
 					.done(function(ret){
-						console.log(ret)
 						_this.renderFooter(ret.channels)
 					}).fail(function(){
 						console.log("error")
 					})
 			},
 			renderFooter: function(channels){
-				console.log(channels)
 				var html = ""
 				channels.forEach(function(channels){
-					html += '<li data-channel-id='+channels.channel_id+'>'
+					html += '<li data-channel-id='+channels.channel_id+' data-channel-name='+channels.name+'>'
 		            + '<div class="cover" style="background-image:url('+channels.cover_small+')"></div>'
 		            + '<h3>'+channels.name+'</h3>'
 		            +'</li>'
@@ -393,18 +410,122 @@
 				})
 			}
 		}
-		var App = {
+		var Fm = {
 			init: function(){
+				this.$container = $("#page-music")
+				this.audio = new Audio()
+				this.audio.autoplay = true
 				this.bind()
 			},
 			bind: function(){
-				EventCenter.on("select-album", function(e,data){
-					console.log("select", data)
+				var _this = this
+				EventCenter.on("select-album", function(e,channelObj){
+					_this.channelId = channelObj.channelId
+					_this.channelName = channelObj.channelName
+					_this.loadMusic()
 				})
+
+				this.$container.find(".btn-play").on("click", function(){
+					var $btn = $(this)
+					if($btn.hasClass("icon-play")){
+						$btn.removeClass("icon-play").addClass("icon-pause")
+						_this.audio.play()
+					}else {
+						$btn.removeClass("icon-pause").addClass("icon-play")
+						_this.audio.pause()
+					}
+				})
+				this.$container.find(".btn-next").on("click", function(){
+					_this.loadMusic()
+				})
+				this.$container.find(".bar").on("click",function(e){
+					var percent = e.offsetX / parseInt(getComputedStyle(this).width)
+					_this.audio.currentTime = _this.audio.duration * percent
+				})
+
+				this.audio.addEventListener("play", function(){
+					clearInterval(_this.statusClock)
+					_this.statusClock =setInterval(function(){
+						_this.updateStatus()
+					},1000)
+				})
+				this.audio.addEventListener("pause", function(){
+					clearInterval(_this.statusClock)
+				})
+				this.audio.addEventListener("ended",function(){
+					_this.loadMusic()
+				})
+			},
+			loadMusic(callback){
+				var _this = this
+				$.getJSON("//jirenguapi.applinzi.com/fm/getSong.php",{channel:this.channelId}).done(function(ret){
+						_this.song = ret["song"][0]						
+						_this.setMusic()
+						_this.loadLyric()
+				})
+			},
+			loadLyric(){
+				var _this = this
+				$.getJSON("//jirenguapi.applinzi.com/fm/getLyric.php",{sid:this.song.sid}).done(function(ret){
+						var lyric =ret.lyric
+						var lyricObj = {}
+						lyric.split("\n").forEach(function(line){
+							var times = line.match(/\d{2}:\d{2}/g)
+							var str = line.replace(/\[.+?\]/g, "")
+							if(Array.isArray(times)){
+								times.forEach(function(time){
+									lyricObj[time] = str
+								})
+							}
+						})
+						_this.lyricObj = lyricObj
+				})
+			},
+			setMusic(){
+				this.audio.src = this.song.url
+				$(".bg").css("background","url("+this.song.picture+")")
+				this.$container.find(".aside figure").css("background","url("+this.song.picture+")")
+				this.$container.find(".detail h1").text(this.song.title)
+				this.$container.find(".detail .author").text(this.song.artist)
+				this.$container.find(".tag").text(this.channelName)
+
+				this.$container.find(".btn-play").removeClass("icon-play").addClass("icon-pause")
+			},
+			updateStatus(){
+				var min = Math.floor(this.audio.currentTime/60)
+				var second = Math.floor(Fm.audio.currentTime%60)+""
+				second =second.length === 2?second:"0"+second
+				this.$container.find(".current-time").text(min+":"+second)
+				this.$container.find(".bar-progress").css("width",this.audio.currentTime/this.audio.duration*100+"%")
+				var line = this.lyricObj["0"+min+":"+second]
+				if(line){
+					this.$container.find(".lyric p").text(line).boomText()
+				}
 			}
 		}
+		$.fn.boomText = function(type){
+		  type = type || 'rollIn'
+		  this.html(function(){
+		    var arr = $(this).text()
+		    .split('').map(function(word){
+		        return '<span class="boomText">'+ word + '</span>'
+		    })
+		    return arr.join('')
+		  })
+		  
+		  var index = 0
+		  var $boomTexts = $(this).find('span')
+		  var clock = setInterval(function(){
+		    $boomTexts.eq(index).addClass('animated ' + type)
+		    index++
+		    if(index >= $boomTexts.length){
+		      clearInterval(clock)
+		    }
+		  }, 300)
+		}
+
 		Footer.init()
-		App.init()
+		Fm.init()
 	</script>
 </body>
 </html>
