修改了文件

--- a/projects/music/music.html
+++ b/projects/music/music.html
@@ -254,7 +254,7 @@
 				<figure></figure>
 				<div class="actions">
 					<span class="btn-collect iconfont icon-like"></span>
-					<span class="btn-play iconfont icon-pause"></span>
+					<span class="btn-play iconfont icon-play"></span>
 					<span class="btn-next iconfont icon-next"></span>
 				</div>
 			</div>
