--- a/projects/3D登录框.html
+++ b/projects/3D登录框.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>登录|注册</title>
-	<link rel="stylesheet" href="//at.alicdn.com/t/font_386484_bikg30mfvlp4lsor.css">
+	<link rel="stylesheet" href="//at.alicdn.com/t/font_570899_b34btcx7j7jmunmi.css">
 	<style>
 	 * {
 	 	margin: 0;
@@ -35,6 +35,9 @@
    	margin-right: 20px;
    	font-size: 20px;
    }
+   header .login .iconfont {
+   	font-size: 30px;
+   }
    .page {
    	display: none;
    }
@@ -43,7 +46,7 @@
    	left: 50%;
    	top: 50%;
    	transform: translate(-50%，-50%);
-   	width: 500px;
+   	width: 400px;
    	padding: 20px;
    	background-color: #fff;
    	box-shadow: 0px 2px 2px 4px rgba(0,0,0,0.2)
@@ -84,29 +87,29 @@
    }
 		.modal .content input[type=text],
 		.modal .content input[type=password] {
-			width: 100%;
-			padding: 10px 10px 10px 30px;
-			outline: none;
-		}
+				width: 100%;
+				padding: 10px 10px 10px 30px;
+				outline: none;
+			}
 		.modal .content input [type=submit] {
-			padding:  6px 10px;
-			border: none;
-			background: #fff;
-			box-shadow: 0 0 2px rgba(0,0,0,0.5);
-			outline: none;
-		}
-		.page.login .modal-login,
-		.page.register .modal-register {
-			transform: translate(-50%,-50%) rotateY(0deg);
-      backface-visibility: hidden;
-      transition: all 1s;
-		}
-		.page.login .modal-register,
-		.page.register .modal-login {
-			transform: translate(-50%,-50%) rotateY(180deg);
-      backface-visibility: hidden;
-      transition: all 1s;
-		}	
+				padding:  6px 10px;
+				border: none;
+				background: #fff;
+				box-shadow: 0 0 2px rgba(0,0,0,0.5);
+				outline: none;
+			}
+			.page.login .modal-login,
+			.page.register .modal-register {
+				transform: translate(-50%,-50%) rotateY(0deg);
+	      backface-visibility: hidden;
+	      transition: all 1s;
+			}
+			.page.login .modal-register,
+			.page.register .modal-login {
+				transform: translate(-50%,-50%) rotateY(180deg);
+	      backface-visibility: hidden;
+	      transition: all 1s;
+			}	
 	</style>
 </head>
 <body>
@@ -181,19 +184,19 @@
 		}
 
 		$(".page").addEventListener("click", function(e){
-		e.stopPropagation()
-		if(e.target.classList.contains("login")){
-			$(".page").classList.remove("register")
-			$(".page").classList.add("login")
+			e.stopPropagation()
+			if(e.target.classList.contains("login")){
+				$(".page").classList.remove("register")
+				$(".page").classList.add("login")
 		}
-		if(e.target.classList.contains("register")){
-			$(".page").classList.add("register")
-			$(".page").classList.remove("login")
+			if(e.target.classList.contains("register")){
+				$(".page").classList.add("register")
+				$(".page").classList.remove("login")
 		}
 		console.log(e.target)
 		console.log(this)
 		window.target = e.target
-		 if(e.target.classList.contains("close")){
+		 	if(e.target.classList.contains("close")){
         $(".page").style.display = "none"
       }
 		})
