--- a/projects/轮播.html
+++ b/projects/轮播.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>轮播</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="">
   <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
   <style>
     .carousel {
