--- a/projects/carousel.html
+++ b/projects/carousel.html
@@ -3,9 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>轮播</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
-  <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script type="text/javascript" src="//apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
   <style>
     .carousel {
       position: relative;
